# Polarchat

./: .gitignore  PRIVACY.md  README.md  package-lock.json  package.json
.github/workflows/: release-desktop.yml
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
client/src/components/chat/: ChatArea.tsx  MessageInput.tsx  MessageList.tsx
client/src/components/common/: PrivacyBadge.tsx
client/src/components/download/: DownloadPage.tsx
client/src/components/layout/: MainLayout.tsx  Sidebar.tsx
client/src/components/modals/: CreateServerModal.tsx  JoinServerModal.tsx
client/src/crypto/: index.ts  keyManager.ts
client/src/hooks/: useWebRTC.ts  useWebSocket.ts
client/src/store/: authStore.ts  chatStore.ts  voiceStore.ts
client/src/utils/: api.ts
electron/: entitlements.mac.plist  main.ts  package-lock.json  package.json  preload.ts  tsconfig.json  updater.ts
electron/assets/: generate-icons.sh
server/: package.json  tsconfig.json
server/src/: crypto.ts  db.ts  index.ts  privacy.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  channels.ts  servers.ts
server/src/ws/: handler.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
worker-download/: package-lock.json  package.json  wrangler.toml
worker-download/scripts/: install.ps1  install.sh
worker-download/src/: index.ts
(+2 files in other folders)
